--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@chakra-ui/react": "^1.7.1"
+    "@chakra-ui/react": "^1.7.1",
+    "@emotion/react": "^11.6.0"
   }
 }
