--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@chakra-ui/react": "^1.7.1",
-    "@emotion/react": "^11.6.0"
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0"
   }
 }
