--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.0.4",
+    "prettier": "^2.4.1"
   }
 }
