--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Raheem's Website",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -H 0.0.0.0",
+    "build": "next build",
+    "prettier": "prettier -write"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Raheem Abolfathzadeh",
+  "license": "MIT",
   "dependencies": {
     "@chakra-ui/react": "^1.7.1",
     "@emotion/react": "^11.6.0",
