--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^1.7.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^5.3.0",
     "next": "^12.0.4",
     "react": "^17.0.2",
